--- a/.github/workflows/schedule.yaml
+++ b/.github/workflows/schedule.yaml
@@ -2,7 +2,7 @@ name: Bill clients
 
 on:
   schedule:
-    - cron: "0 20 28 * *"
+    - cron: "0 12 29 * *"
 
 jobs:
   bill:
@@ -13,5 +13,8 @@ jobs:
         with:
           node-version: "18"
           cache: pnpm
-      - run: pnpm i
+      - uses: pnpm/action-setup@v2
+        with:
+          version: "8.6.5"
+          run_install: true
       - run: pnpm start
