--- a/.github/workflows/schedule.yaml
+++ b/.github/workflows/schedule.yaml
@@ -1,6 +1,7 @@
 name: Bill clients
 
 on:
+  workflow_dispatch:
   schedule:
     - cron: "0 12 29 * *"
 
@@ -9,12 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+        name: Install pnpm
+        with:
+          version: 8
+          run_install: false
       - uses: actions/setup-node@v2
         with:
           node-version: "18"
           cache: pnpm
-      - uses: pnpm/action-setup@v2
-        with:
-          version: "8.6.5"
-          run_install: true
       - run: pnpm start
